# Kairo-Phantom

./: .coveragerc  .gitignore  .gitleaks.toml  .pip-audit-ignore  .pre-commit-config.yaml  .sops.yaml  ACCEPTANCE.md  AGENT_MEMORY.md  BENCHMARKS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CROSS_PLATFORM_REPORT.md  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DOMAINS.md  FAILURE_TAXONOMY.md  FAQ.md  HARDWARE.md  INFRA_PENDING.md  KAIRO_MASTER_MEMORY.md  Kairo.facts  LAUNCH_CHECKLIST.md  LEGAL_BEACHHEAD.md  LICENSE  MASTER_GAUNTLET_REPORT.json  MASTER_GAUNTLET_REPORT_v3.json  MODEL_CARDS.md  Makefile  NETWORK_AUDIT.md  ORIGINAL_REQUEST.md  PACKAGING.md  PREMORTEM.md  PRODUCTION_CERTIFICATION_REPORT.md  PRODUCTION_READINESS_REPORT.md  PROGRESS.md  PROJECT.md  QUICKSTART.md  (+67 more)
.cargo/: config.toml
kairo-agent-sdk/: Cargo.toml
kairo-agent-sdk/examples/: academic-researcher.toml  legal-brief.toml  medical-scribe.toml
kairo-agent-sdk/src/: agent_registry.rs  agent_router.rs  cli.rs  lib.rs  sandbox.rs
kairo-mcp/: Cargo.toml  README.md  mcp-manifest.json
kairo-mcp/src/: client.rs  main.rs  protocol.rs  tools.rs
mcp-servers/kairo-mcp/: Cargo.toml
mcp-servers/kairo-mcp/src/: main.rs
phantom-core/: Cargo.toml  build_log.txt  build_output.txt  calibration_data.json  check_v2.txt  enterprise.toml.example  release_build.txt  release_v2.txt  reliability_report.md  task_completion_rate.json
phantom-core/benches/: latency.rs  memory_benchmark.rs
phantom-core/compliance/: gdpr.toml  hipaa.toml  pci.toml
phantom-core/fuzz/: Cargo.toml
phantom-core/fuzz/fuzz_targets/: mcp_json_parser.rs  toml_plugin_loader.rs  uia_text_parser.rs
phantom-core/mutants_real.out/mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json
phantom-core/mutants_real.out/mutants.out.old/: caught.txt  lock.json  outcomes.json
phantom-core/mutants_real.out/mutants.out.old/diff/: phantom-core__src__governance__tool_gate.rs_line_30_col_9.diff  phantom-core__src__governance__tool_gate.rs_line_35_col_59.diff  phantom-core__src__governance__tool_gate.rs_line_42_col_12.diff
phantom-core/mutants_real.out/mutants.out/diff/: phantom-core__src__governance__tool_gate.rs_line_35_col_9.diff  phantom-core__src__governance__tool_gate.rs_line_35_col_9_001.diff  phantom-core__src__governance__tool_gate.rs_line_50_col_29.diff  phantom-core__src__governance__tool_gate.rs_line_50_col_29_004.diff  phantom-core__src__governance__tool_gate.rs_line_50_col_29_005.diff  phantom-core__src__governance__tool_gate.rs_line_50_col_9.diff  phantom-core__src__governance__tool_gate.rs_line_50_col_9_001.diff  phantom-core__src__governance__tool_gate.rs_line_58_col_9.diff  (+2 more)
phantom-core/src/: ai.rs  api.rs  app_watcher.rs  aws_emulation.rs  background_worker.rs  chaos.rs  code_context.rs  code_injector.rs  command_protocol.rs  compliance_scanner.rs  confidence.rs  config.rs  context.rs  context7.rs  context_optimizer.rs  crdt.rs  cross_doc_consistency.rs  deep_presenter.rs  demo.rs  doc_prompt_builder.rs  document_context.rs  embedding.rs  eval.rs  excel_formula.rs  ghost_session.rs  governance.rs  guardrails.rs  health_check.rs  hotkey.rs  identity.rs  image_pipeline.rs  inference.rs  injector.rs  intent_gate.rs  interrupts.rs  kami_export.rs  kpx_export.rs  lan_sync.rs  lib.rs  main.rs  (+51 more)
phantom-core/src-tauri/: Info.plist  app.manifest  build.rs  tauri.conf.json
phantom-core/src-tauri/src/: onboarding.rs
phantom-core/src-tauri/wix/: main.wxs
phantom-core/src/capture/: fallback.rs  macos.rs  mod.rs  pii.rs  windows.rs
phantom-core/src/collaborative/: mod.rs  session_detector.rs  yrs_peer.rs
phantom-core/src/cua/: config.rs  cua_executor.rs  cua_gate.rs  cua_planner.rs  grp_cua_plan.rs  mod.rs  vlm_bridge.rs  world_model.rs
phantom-core/src/enterprise/: audit.rs  compliance.rs  mod.rs  rbac.rs  spiffe_identity.rs  sso.rs
phantom-core/src/extractors/: kreuzberg_ext.rs  mod.rs
phantom-core/src/governance/: mod.rs  security_auditor.rs  tool_gate.rs
phantom-core/src/integration/: mod.rs  notion.rs  obsidian.rs  slack.rs
phantom-core/src/memory/: document_graph.rs  feedback.rs  mem_gas.rs  mem_machine.rs  mod.rs  optimizer.rs  types.rs
phantom-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
phantom-core/src/skills/: design_agent.rs  ppt_agent.rs
phantom-core/src/skills/health/: SKILL.md
phantom-core/src/swarm/: content.rs  data.rs  design.rs  engineer.rs  image.rs  legal.rs  medical.rs  metrics.rs  mod.rs  reasoning.rs  sales.rs
phantom-core/tests/: code_pipeline_tests.rs  e2e_gauntlet.rs  e2e_mac_t9_background.rs  e2e_memory_gauntlet.rs  e2e_tests.rs  e2e_win_t1.rs  e2e_win_t2.rs  gauntlet.rs  gauntlet_extended.rs  kmb1_benchmark.rs  layer1_unit_tests.rs  layer2_property_tests.rs  layer3_chaos_tests.rs  layer4_e2e_tests.rs  layer5_sim_tests.rs  layer6_wasm_tests.rs  layer7_e2e_matrix.rs  memory_benchmark.rs  production_gauntlet_39.rs  sentinel_leakage.rs  sim_test.rs  test_audit_chain.rs  test_calibration_reliability.rs  test_collaborative_yjs.rs  test_cross_platform_ghost.rs  test_domain7_code.rs  test_domain7_kami.rs  test_domain9_enterprise.rs  test_domain_degradation.rs  test_e2e_task_completion.rs  test_governance_gate.rs  test_injector.rs  test_multi_monitor.rs  test_no_ignored_tests.rs  test_offline_mode.rs  test_sprint5_hardening.rs  test_wasm_sandbox.rs
phantom-core/tests/core/: mod.rs  test_memory_benchmark.rs  test_protocol_enforcement.rs  test_sentinel_retry.rs
phantom-core/tests/cua/: mod.rs
phantom-core/tests/pipeline/: test_three_layer_pipeline.rs
phantom-core/tests/platform/: test_cross_platform.rs
phantom-core/tests/security/: test_audit_chain.rs  test_domain10_e2e.rs  test_domain11_e2e.rs  test_domain9_e2e.rs  test_governance_gate.rs  test_prompt_injection.rs  test_wasm_sandbox.rs
phantom-core/ui/: ConfidenceBand.jsx  OnboardingWizard.jsx  demo.html
phantom-overlay/src-tauri/: Cargo.toml  tauri.conf.json
phantom-overlay/src-tauri/src/: lib.rs  main.rs  phantom_bridge.rs
playground/: Cargo.toml  fibonacci.rs  index.html  test_uia.rs
(+1997 files in other folders)
