[package]
name = "kairo-agent-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify = "6.1"
wasmtime = "36.0"
wasmtime-wasi = "36.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
