[package]
name = "phantom-core"
version = "0.3.0"
edition = "2021"
description = "Kairo Phantom — Rust-native AI ghost writer core engine"

[[bin]]
name = "kairo-phantom"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Windows UI Automation — reads text from any focused app
uiautomation = "0.25"

# Keyboard simulation — ghost types AI text into any app
enigo = "0.2"

# Pure Rust CRDT (Yjs port) — CRDT state for AI peer session
yrs = "0.21"

# Ollama local AI client
ollama-rs = { version = "0.2", features = ["stream"] }

# HTTP client for OpenAI/Anthropic/Gemini adapters
reqwest = { version = "0.12", features = ["json", "stream"] }

# Global hotkey listener
rdev = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config file
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for sentinels
uuid = { version = "1.10", features = ["v4"] }

# Document Intelligence (Step 2)
# Note: kreuzberg is currently a git dependency as per roadmap
# kreuzberg = { git = "https://github.com/kreuzberg-dev/kreuzberg", features = ["rust-bindings"] }
text-splitter = "0.18"
unicode-normalization = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Channel utilities
crossbeam-channel = "0.5"

# Futures stream for SSE/streaming AI responses
futures = "0.3"
futures-util = "0.3"

# String similarity for Human Precedence detection
strsim = "0.11"

# Async trait support
async-trait = "0.1"

# Home directory resolution for config path
dirs = "5.0"

# ZIP archive reader — for native OOXML parsing (DOCX/PPTX/XLSX are ZIP files)
zip = "2.1"

# Base64 encoding/decoding — for image pipeline (gpt-image-1 returns b64)
base64 = "0.22"

# CancellationToken — for ghost session streaming cancel (Esc)
tokio-util = { version = "0.7", features = ["full"] }

# Web server for IPC with Tauri overlay
axum = "0.7"

# Static global state
once_cell = "1.20"

# A1/A2: SIMD text scanning (memchr — used by ripgrep) — 3-8x faster text diffs
memchr = "2.7"

# A3: Async utilities for zero-alloc SSE parsing
pin-project-lite = "0.2"

# Advancement 7: WASM Plugin Sandbox (real Wasmtime JIT)
wasmtime = "21.0"

# D2/F1: Real Ed25519 cryptography — plugin signing + agent identity
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# C1: WGPU native GPU rendering — replaces Node.js/Puppeteer (10-100x faster)
wgpu = { version = "22", features = ["vulkan-portability"] }
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

# Advancement 2: macOS background injection
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.23"
macos-accessibility-client = "0.0.2"


[dev-dependencies]
proptest = "1.4"
madsim = "0.2"
autopilot = "0.4.0"
tempfile = "3.27.0"
hex = "0.4.3"
