[package]
name = "phantom-core"
version = "0.3.0"
edition = "2021"
description = "Kairo Phantom — AI ghost-writer that haunts any app and learns how you write"
license = "MIT"
repository = "https://github.com/Kartik24Hulmukh/Kairo-Phantom"
homepage = "https://github.com/Kartik24Hulmukh/Kairo-Phantom"
documentation = "https://github.com/Kartik24Hulmukh/Kairo-Phantom/blob/main/CONTRIBUTING.md"
authors = ["Kairo Phantom Contributors"]
keywords = ["ai", "ghost-writer", "llm", "ollama", "document-intelligence"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"



[lib]
name = "phantom_core"
path = "src/lib.rs"

[[bin]]
name = "kairo-phantom"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Keyboard simulation — ghost types AI text into any app
enigo = "0.2"

# Pure Rust CRDT (Yjs port) — CRDT state for AI peer session
yrs = "0.21"

# Ollama local AI client
ollama-rs = { version = "0.2", features = ["stream"] }

# HTTP client for OpenAI/Anthropic/Gemini adapters
reqwest = { version = "0.12", features = ["json", "stream"] }

# Global hotkey listener
rdev = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
alaya = "0.4"

# Config file
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for sentinels
uuid = { version = "1.10", features = ["v4"] }

# Document Intelligence (Step 2)
# Note: kreuzberg is currently a git dependency as per roadmap
# kreuzberg = { git = "https://github.com/kreuzberg-dev/kreuzberg", features = ["rust-bindings"] }
text-splitter = "0.18"
unicode-normalization = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Channel utilities
crossbeam-channel = "0.5"

# Futures stream for SSE/streaming AI responses
futures = "0.3"
futures-util = "0.3"

# String similarity for Human Precedence detection
strsim = "0.11"

# Async trait support
async-trait = "0.1"

# Home directory resolution for config path
dirs = "5.0"

# ZIP archive reader — for native OOXML parsing (DOCX/PPTX/XLSX are ZIP files)
zip = "2.1"

# Base64 encoding/decoding — for image pipeline (gpt-image-1 returns b64)
base64 = "0.22"

# CancellationToken — for ghost session streaming cancel (Esc)
tokio-util = { version = "0.7", features = ["full"] }

# Web server for IPC with Tauri overlay
axum = "0.7"

# Static global state
once_cell = "1.20"

# A1/A2: SIMD text scanning (memchr — used by ripgrep) — 3-8x faster text diffs
memchr = "2.7"

# A3: Async utilities for zero-alloc SSE parsing
pin-project-lite = "0.2"

# Advancement 7: WASM Plugin Sandbox (real Wasmtime JIT)
wasmtime = "21.0"

# D2/F1: Real Ed25519 cryptography — plugin signing + agent identity
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# C1: WGPU native GPU rendering — replaces Node.js/Puppeteer (10-100x faster)
wgpu = { version = "22", features = ["vulkan-portability"] }
regex = "1.12.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
tempfile = "3"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.0"
opentelemetry-otlp = "0.32.0"
spiffe = "0.15.1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"

# Domain 9: Enterprise Governance & Compliance
jsonwebtoken = "9"           # MIT — JWT RS256/HS256 validation for Logto/OIDC SSO
hmac = "0.12"                # MIT/Apache-2.0 — HMAC-SHA256 for audit chain sealing
hex = "0.4"                  # MIT/Apache-2.0 — SHA-256 fingerprint encoding (runtime dep)


# Real offline embeddings — all-MiniLM-L6-v2 (80 MB ONNX, <5 ms/embed, zero API calls)
# Gated behind "local-embeddings" feature so CI stays fast; enable for production builds.
fastembed = { version = "3", optional = true }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"

[features]
default = []
local-embeddings = ["dep:fastembed"]
# Gates: Figma integration, collaborative docs, export engine, and voice (Domains 5-8)
# These stay behind this flag until Phase 5 of the Foundation-First Hardening Plan is complete.
advanced = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }
# Windows UI Automation — reads text from any focused Windows app
uiautomation = "0.25"

# Advancement 2: macOS background injection
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.23"
macos-accessibility-client = "0.0.2"


[[bench]]
name = "latency"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[dev-dependencies]
proptest = "1.4"
madsim = "0.2"
autopilot = "0.4.0"
hex = "0.4.3"
criterion = { version = "0.5", features = ["async_tokio"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }  # Domain 10: tamper-detection test

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"

[lints.clippy]
empty_line_after_doc_comments = "allow"
manual_is_multiple_of = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"
assertions_on_constants = "allow"
non_binding_let_on_futures = "allow"
let_underscore_future = "allow"
doc_list_item_without_indentation = "allow"

# ── Domain 10: Security Regression Tests ──────────────────────────────────────
[[test]]
name = "test_prompt_injection"
path = "tests/security/test_prompt_injection.rs"

[[test]]
name = "test_wasm_sandbox"
path = "tests/security/test_wasm_sandbox.rs"

[[test]]
name = "test_governance_gate"
path = "tests/security/test_governance_gate.rs"

[[test]]
name = "test_audit_chain"
path = "tests/security/test_audit_chain.rs"

# ── Domain 9: Enterprise Governance E2E Tests ─────────────────────────────────────────────────────
[[test]]
name = "test_domain9_e2e"
path = "tests/security/test_domain9_e2e.rs"

# ── Domain 10: Security Hardening E2E Tests ───────────────────────────────────────────────────
[[test]]
name = "test_domain10_e2e"
path = "tests/security/test_domain10_e2e.rs"

# ── Domain 11: Cross-Platform Hardening Tests ─────────────────────────────────
[[test]]
name = "test_cross_platform"
path = "tests/platform/test_cross_platform.rs"

# ── Domain 11: Cross-Platform E2E Gate Certification ─────────────────────────
[[test]]
name = "test_domain11_e2e"
path = "tests/security/test_domain11_e2e.rs"

# ── Phase 1 Foundation Hardening: Protocol Enforcement Gate Tests ─────────────
[[test]]
name = "test_protocol_enforcement"
path = "tests/core/test_protocol_enforcement.rs"

[[test]]
name = "test_sentinel_retry"
path = "tests/core/test_sentinel_retry.rs"

[[test]]
name = "test_memory_benchmark"
path = "tests/core/test_memory_benchmark.rs"

[[test]]
name = "test_three_layer_pipeline"
path = "tests/pipeline/test_three_layer_pipeline.rs"
