[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[dependencies]
uiautomation = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "test_uia"
path = "test_uia.rs"

[workspace]

# Empty workspace block to prevent joining the parent workspace
