[package]
name = "phantom-overlay"
version = "0.3.0"
edition = "2021"

[lib]
name = "phantom_overlay_lib"
crate-type = ["rlib"]
test = false
doctest = false

[[bin]]
name = "phantom-overlay"
path = "src/main.rs"
test = false

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
